tf-aws-infra/internet_gateway.tf
# internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = "${var.vpc_name}-igw"
    Environment = var.environment
  }

  depends_on = [aws_vpc.main]
}
